image carousel resize

--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -27,7 +27,7 @@
           </div> {% endcomment %}
        
         <div class="d-grid gap-2 col-6 mx-auto my-5 mb-4">
-          <button type="submit" class="btn btn-warning btn-lg">sign up</button>
+          <button type="submit" class="btn signup-button btn-outline-secondary btn-lg">sign up</button>
         </div>
 
       
