--- a/psr/static/psr/base.css
+++ b/psr/static/psr/base.css
@@ -1,48 +1,84 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-   
+  font-family: 'Montserrat', sans-serif;
 
-  }
-  .carousel-caption{
-    background-color: #FF8C32;
-  }
-  .navbar-brand{
-    font-family: "Ubuntu";
+}
 
-  }
+.carousel-caption {
+  margin-bottom: 23%;
 
+}
+
+.h1-title {
+  font-size: 4rem;
+  font-weight: 400;
+  font-family: 'Merriweather Sans', sans-serif;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+.p-title {
+  font-size: 2.5rem;
+  font-family: 'Merriweather Sans', sans-serif;
+}
+
+
+.container-fluid {
+  padding-left: 5%;
+  padding-right: 5%;
+}
 
 /* Navbar Section */
+.navbar-brand {
+  font-family: "Ubuntu";
+}
 
-.login-button{
+.btn {
+  color: #fff
+}
 
- background-color: #06FF00;
+.logout-button {
+  background-color: #F94C66;
+}
+
+.profile-button {
+  background-color: #15133C;
+}
+
+.signup-button {
+  background-color: #1B1A17;
+}
+
+
+/* #564A4A
+#FF8C32 */
+
+/* Footer Section */
+.footer-class {
+  padding: 5% 15%;
+  text-align: center;
+}
+
+#footer {
+  background-color: #06113C;
+  color: #fff;
+  margin: auto;
+
 }
 
 
 
-  /* #564A4A */
 
-/* Footer Section */
-.footer-class {
-    padding: 5% 15%;
-    text-align: center;
- 
-  }
-#footer {
-    background-color:#06113C;
-    margin: auto;
-   
-  }
-  
-  .social-icon {
-    margin: 20px 10px;
-    color: #ff4c68;
-  }
-  
-  .social-icon:hover {
-    color: #e18f72;
-  }
-  .copyright-text{
-    color: #fff;
-  }
+.social-icon {
+  margin: 20px 10px;
+  color: #ff4c68;
+}
+
+.social-icon:hover {
+  color: #e18f72;
+}
+
+.copyright-text {
+  color: #fff;
+}
