--- a/psr/templates/psr/base.html
+++ b/psr/templates/psr/base.html
@@ -1,129 +1,112 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!--CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-              crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'psr/base.css' %}">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap"
-              rel="stylesheet">
+  <!--CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'psr/base.css' %}">
 
-        <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/14fae717c0.js" crossorigin="anonymous"></script>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap" rel="stylesheet">
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <title>Welcome to PSR</title>
-    </head>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/71f5dfa71f.js" crossorigin="anonymous"></script>
+  
 
-    <body>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <title>Welcome to PSR</title>
+</head>
 
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="psr navbar-brand" href="#">
-              <img src="{% static 'psr/logo.png' %}" alt="" width="30" height="25" class="d-inline-block align-text-top">
-              
-              PSR
+<!-- body -->
 
+<body>
 
-            </a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active"
-                     aria-current="page"
-                     href="{% url 'psr-home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active"
-                     aria-current="page"
-                     href="{% url 'psr-members' %}">Members</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active"
-                     aria-current="page"
-                     href="{% url 'psr-about' %}">About</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active"
-                     aria-current="page"
-                     href="{% url 'psr-contact' %}">Contact Us</a>
-              </li>
-              </ul>
+  <!-- Navbar -->
+  <section id="navbar">
 
-         <div class="mx-2">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Logo -->
+        <a class="psr navbar-brand" href="#">
+          <img src="{% static 'psr/logo.png' %}" alt="" width="30" height="25" class="d-inline-block align-text-top">
+          PSR
+        </a>
+
+        <!-- Navbar items -->
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'psr-home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'psr-members' %}">Members</a>
+            </li>
+            {% comment %} <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'psr-about' %}">About</a>
+            </li> {% endcomment %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'psr-contact' %}">Contact Us</a>
+            </li>
+          </ul>
+          <div class="mx-2">
             {% if user.is_authenticated %}
 
-                <a class="btn btn-info mx-1"   href="{% url 'post-create' %}" >Write</a>
-                 
-                 <a class="btn btn-dark mx-1"   href="{% url 'profile' %}" >Profile</a>
-
-                 <a class="btn btn-warning mx-1"   href="{% url 'logout' %}" >Logout</a>
-
-
+            <a class="btn btn-info btn-outline-secondary mx-1" href="{% url 'post-create' %}">Write</a>
+            <a class="btn profile-button btn-outline-secondary mx-1" href="{% url 'profile' %}">Profile</a>
+            <a class="btn logout-button btn-outline-secondary" href="{% url 'logout' %}">Logout</a>
 
             {% else %}
-            <a class="btn btn-secondary mx-1"  href="{% url 'login' %}" > Login</a>
-               <a class="btn btn-success mx-1"   href="{% url 'signup' %}" >Signup</a>
+            <a class="btn btn-success btn-outline-secondary mx-1" href="{% url 'login' %}"> Login</a>
+            <a class="btn btn-danger btn-outline-secondary mx-1" href="{% url 'signup' %}">Signup</a>
             {% endif %}
+          </div>
+        </div>
       </div>
-     </div>
-   </div>
-</nav>
+    </nav>
+  </section>
 
-          {%if messages %}
+  <!-- Account creation alert -->
+  {%if messages %}
 
-              {% for message in messages %}
-              <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                </symbol>
-                <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-                </symbol>
-                <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </symbol>
-              </svg>
+  {% for message in messages %}
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+    </symbol>
+    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path
+        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+    </symbol>
+    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path
+        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+    </symbol>
+  </svg>
+  <div class="alert alert-{{ message.tags}} d-flex align-items-center alert-dismissible" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+      <use xlink:href="#check-circle-fill" />
+    </svg>
+    <div>
+      {{ message}}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
+  {% endfor %}
+  {% endif %}
 
-              <div class="alert alert-{{ message.tags}} d-flex align-items-center alert-dismissible" role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
-                <div>
-                  {{ message}}
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-              </div>
-             {% endfor %}
+  <!-- Block content to override -->
+  {% block content %} {% endblock %}
 
-         {% endif %}
+</body>
 
-        {% block content %} {% endblock %}
-
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="container-fluid footer-class">
-                <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i>
-                <i class="social-icon fab fa-twitter    fa-2x " aria-hidden="true"></i>
-                <i class="social-icon fab fa-instagram  fa-2x " aria-hidden="true"></i>
-                <i class="social-icon fas fa-envelope   fa-2x " aria-hidden="true"></i>
-                <p class="copyright-text">
-                     Copyright 2022 PSR
-                </p>
-            </div>
-        </footer>
-
-    </body>
 </html>
