--- a/psr/templates/psr/home.html
+++ b/psr/templates/psr/home.html
@@ -1,42 +1,47 @@
 {% extends 'psr/base.html' %}
 {% load static %}
-{% block content %} 
-  
-  
-  <!-- carousel -->
 
- <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+{% block content %}
+<!-- carousel section -->
+
+<div class="container-fluid ">
+<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
+
+    <!-- carousel item-1-->
     <div class="carousel-item active">
-      <img src="{% static 'psr/camera2.jfif' %}" height="650" width="1400" class="d-block w-100" alt="...">
+      <img src="{% static 'psr/new 1.jpg' %}" height="650" width="1400" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h1>Welcome to PSR</h1>
-          <p>Photographic Society of RUET</p>
-          
+        <h1 class="h1-title">Welcome to PSR</h1>
+        <p class="p-title">Photographic Society of RUET</p>
       </div>
     </div>
+
+    <!-- carousel item-2-->
     <div class="carousel-item">
-      <img src="{% static 'psr/cr_spectacle.jpg' %}" height="650" width="1400"class="d-block w-100" alt="...">
+      <img src="{% static 'psr/cr_spectacle.jpg' %}" height="650" width="1400" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h1>Best photography blog</h1>
-          <p>Photographic Society of RUET</p>
-          
+        <h1 class="h1-title">Best photography blog</h1>
+      
       </div>
     </div>
+
+    <!-- carousel item-3-->
     <div class="carousel-item">
       <img src="{% static 'psr/blog1.jfif' %}" height="650" width="1400" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h1>Award winning blog</h1>
-          <p>Photographic Society of RUET</p>
-          
+        <h1 class="h1-title">Award winning blog</h1>
+       
       </div>
     </div>
   </div>
+
+  <!-- carousel buttons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
@@ -46,41 +51,92 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+</div>
 
+<!-- post section -->
+<div class="container justify content center post-container ">
+  <div class="row m-5 ">
 
+    {%for post in posts%}
+    <div class="col-md-4 ">
 
+      <!-- card -->
+      <div class="card m-2">
+        <div class="card-body">
 
-        
-   
-   <!-- card- -->
-   <div class="container justify content center ">
+          <!-- post author -->
+          <strong class="d-inline-block mb-2 text-primary">{{post.author}}</strong>
 
-      <div class="row m-5 ">
-        {%for post in posts%}
-           <div class="col-md-4 " >
-           
-               <div class="card m-2" >
+          <!-- post date -->
+          <div class="mb-1 text-muted">{{post.date_posted|date:"F d, Y"}}</div>
+        </div>
 
-                  <div class="card-body">
-                     <strong class="d-inline-block mb-2 text-primary">{{post.author}}</strong>
-                     <div class="mb-1 text-muted">{{post.date_posted|date:"F d, Y"}}</div>
-                  </div>
-    
-                     <img src="{{ post.photo.url }}" height="200"  class="card-img-top" alt="..."   >
-    
-                  <div class="card-body">
-                      <h5 class="card-title">{{post.title}}</h5>
-                      <p class="card-text">{{post.content}}</p>
-                      <a href="{% url 'post-detail' post.id  %}" class="stretched-link">Continue reading</a>
-                  </div>
+        <!-- post image -->
+        <img src="{{ post.photo.url }}" height="200" class="card-img-top" alt="...">
+        <div class="card-body">
 
-               </div>
-            </div>
-            {% endfor%}
-         </div>
+          <!-- post title -->
+          <h5 class="card-title">{{post.title}}</h5>
+
+          <!-- post content-->
+          <p class="card-text">{{post.content}}</p>
+
+          <!-- post details -->
+          <a href="{% url 'post-detail' post.id  %}" class="stretched-link">view post</a>
+        </div>
+      </div>
     </div>
-      
+    {% endfor%}
 
-   
+  </div>
+</div>
+
+<!-- Footer section -->
+
+
+<section id="footer">
+  <div class="container-fluid footer-class">
+
+    <div class="row">
+      <div class="col-lg-4 footer-col">
+    
+        <h2> About Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lobortis aliquam lorem,
+          gravida mollis lacus dignissim efficitur. Donec vel iaculis nisi. Vestibulum finibus pretium leo eget fringilla. </p>
+
+      </div>
+      <div class="col-lg-4 footer-col">
+        
+        <h2>Newsletter</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lobortis aliquam lorem,
+          gravida mollis lacus dignissim efficitur. Donec vel iaculis nisi. Vestibulum finibus pretium leo eget fringilla. </p>
+
+      </div>
+      <div class="col-lg-4 footer-col">
+        
+        <h2>Follow us</h2>
+          <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i>
+          <i class="social-icon fab fa-twitter    fa-2x " aria-hidden="true"></i>
+          <i class="social-icon fab fa-instagram  fa-2x " aria-hidden="true"></i>
+          <i class="social-icon fas fa-envelope   fa-2x " aria-hidden="true"></i>
+      
+        
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- <footer id="footer">
+  <div class="container-fluid footer-class">
+    <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i>
+    <i class="social-icon fab fa-twitter    fa-2x " aria-hidden="true"></i>
+    <i class="social-icon fab fa-instagram  fa-2x " aria-hidden="true"></i>
+    <i class="social-icon fas fa-envelope   fa-2x " aria-hidden="true"></i>
+    <p class="copyright-text">
+      Copyright 2022 PSR
+    </p>
+  </div>
+</footer> -->
 {% endblock content %}
- 
