--- a/psr/templates/psr/post_confirm_delete.html
+++ b/psr/templates/psr/post_confirm_delete.html
@@ -14,8 +14,8 @@
    
        
         <div class="d-grid gap-2 col-md-6 mx-auto my-5 mb-5">
-          <button type="submit" class="btn btn-danger btn-lg mx-5 my-3">Yes, Delete</button>
-          <a class="btn btn-primary btn-lg my-3 mb-5 mx-5" href="{% url 'post-detail' object.id %}">Cancel</a>
+          <button type="submit" class="btn btn-danger btn-outline-secondary btn-lg mx-5 my-3">Yes, Delete</button>
+          <a class="btn btn-primary btn-outline-secondary btn-lg my-3 mb-5 mx-5" href="{% url 'post-detail' object.id %}">Cancel</a>
         </div>
 
       
