--- a/psr/templates/psr/post_detail.html
+++ b/psr/templates/psr/post_detail.html
@@ -22,8 +22,8 @@
                  {% if object.author == user %} 
           
 
-                    <a class="btn btn-md btn-success  mt-3 mb-3"   href="{% url 'post-update' object.id %}" >Update</a>
-                    <a class="btn btn-md btn-danger mx-2  mt-3 mb-3"   href="{% url 'post-delete' object.id %}" >Delete</a>
+                    <a class="btn btn-md btn-success btn-outline-secondary  mt-3 mb-3"   href="{% url 'post-update' object.id %}" >Update</a>
+                    <a class="btn btn-md btn-danger btn-outline-secondary mx-2  mt-3 mb-3"   href="{% url 'post-delete' object.id %}" >Delete</a>
 
                 {% endif %}
 
