--- a/psr/templates/psr/post_form.html
+++ b/psr/templates/psr/post_form.html
@@ -27,7 +27,7 @@
           </div> {% endcomment %}
        
         <div class="d-grid gap-2 col-6 mx-auto my-5 mb-4">
-          <button type="submit" class="btn btn-warning btn-lg">Post</button>
+          <button type="submit" class="btn btn-warning btn-outline-secondary btn-lg">Post</button>
         </div>
 
       
