--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -28,7 +28,7 @@
           </div> {% endcomment %}
        
           <div class="d-grid gap-2 col-6 mx-auto my-5 mb-4">
-            <button type="submit" class="btn btn-info btn-lg">log in</button>
+            <button type="submit" class="btn btn-warning btn-outline-secondary btn-lg">log in</button>
           </div>
 
       
