--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -16,7 +16,7 @@
    </div>   
          <div class="mb-4 d-flex justify-content-center align-items-center">   
              <div class="d-grid gap-2 col-md-2 mx-auto my-5 mb-4">
-                 <a class="btn btn-info btn-lg" href="{% url 'login' %}">log in again</a>
+                 <a class="btn btn-primary btn-outline-secondary btn-lg" href="{% url 'login' %}">log in again</a>
             </div>
       </div>
 </div>
