--- a/psr/templates/psr/members.html
+++ b/psr/templates/psr/members.html
@@ -1,1 +1,182 @@
 {% extends 'psr/base.html' %}
+{% load static %}
+
+{% block content %}
+
+
+
+<!-- section -->
+
+<div class="container justify content center members-container  ">
+  <div class="row m-5 ">
+    
+ <!-- card 1 -->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span> Advisor </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 1 end-->
+
+           <!-- card 2-->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span> Moderator </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 2 end-->
+           <!-- card 3 -->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span>vice-President </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 3 end-->
+
+           <!-- card 4-->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span> President </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 4 end-->
+           <!-- card 5-->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span> Executive Member </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 5 end-->
+          
+                <!-- card 6-->
+      <div class="col-md-4 ">
+        <div class="card text-center  mb-4 members-card" style="width: 20rem;">
+            <div class="img-box my-5">  
+            <img src="{% static 'psr/member.png' %}" class="card-img-top member-img" alt="...">
+            </div>
+            <div class="card-body">
+              <h3>  Mr XYZ <br><span> Executive Member </span> </h3> 
+              
+            </div>
+              <ul class="sci">
+              <li style="--i:1">
+                <a href="https://www.facebook.com/"> <i class="social-icon fab fa-facebook   fa-2x" aria-hidden="true"></i></a>
+        
+              </li>
+              <li style="--i:2">
+                
+                 <a href="https://www.instagram.com/"> <i class="social-icon fab fa-instagram  fa-2x" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                
+                <a href="https://twitter.com/"> <i class="social-icon fab fa-twitter  fa-2x" aria-hidden="true"></i></a>
+             </li>
+              </ul>
+          </div>
+        </div>
+          <!-- card 6 end-->
+        </div>
+      </div>
+    </div>
+
+{% endblock content %}
