--- a/psr/static/psr/base.css
+++ b/psr/static/psr/base.css
@@ -1,33 +1,19 @@
+
+/* #564A4A
+#FF8C32 */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Poppins', sans-serif;
 
 }
-
-.carousel-caption {
-  margin-bottom: 23%;
-
-}
-
-.h1-title {
-  font-size: 4rem;
-  font-weight: 400;
-  font-family: 'Merriweather Sans', sans-serif;
-}
-
-h5 {
-  font-size: 1.5rem;
-}
-
-.p-title {
-  font-size: 2.5rem;
-  font-family: 'Merriweather Sans', sans-serif;
-}
-
 
 .container-fluid {
   padding-left: 5%;
   padding-right: 5%;
 }
+
 
 /* Navbar Section */
 .navbar-brand {
@@ -37,6 +23,11 @@ h5 {
 .btn {
   color: #fff
 }
+
+.pagination {
+  color: black;
+}
+
 
 .logout-button {
   background-color: #F94C66;
@@ -51,24 +42,91 @@ h5 {
 }
 
 
-/* #564A4A
-#FF8C32 */
+/*<-----Carousel section----->*/
+.carousel-caption {
+  margin-bottom: 23%;
+  
+
+}
+
+.h1-title {
+  font-size: 4rem;
+  font-weight: 400;
+  font-family: 'Merriweather Sans', sans-serif;
+  color: #fff;
+}
+
+.span-2{
+  color: #FF6701;
+
+}
+
+.span-1{
+  color: black;
+
+}
+
+
+h5 {
+  font-size: 1.5rem;
+}
+
+.p-title {
+  font-size: 2.5rem;
+  font-family: 'Merriweather Sans', sans-serif;
+}
+
+/*<-----post section----->*/
+
+
+.post-container {
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+
+
 
 /* Footer Section */
 .footer-class {
-  padding: 5% 15%;
-  text-align: center;
+  padding: 5% 10%;
+ 
 }
 
+.footer-col h2{
+
+  margin-bottom: 15px;
+  font-size: 25px;
+}
+.footer-col div
+{
+  display: flex;
+  align-items: center;
+}
+
+.footer-col div a
+{
+  color: #fff;
+  text-decoration: none;
+}
+ .map{
+
+  text-align: center;
+  margin: auto;
+
+ }
+
+  .footer-col-3
+  {
+    margin: auto;
+    text-align: center;
+  }
 #footer {
   background-color: #06113C;
   color: #fff;
   margin: auto;
 
 }
-
-
-
 
 .social-icon {
   margin: 20px 10px;
@@ -81,4 +139,215 @@ h5 {
 
 .copyright-text {
   color: #fff;
+  text-align: center;
+}
+
+/*<-----login Page----->*/
+
+.login-body{
+
+  background: url('login2.jpg');
+  background-size: cover;
+  height: 90vh;
+  
+}
+
+/*<-----signup Page----->*/
+
+.signup-body{
+
+  background: url('signup2.jpg');
+  background-size: cover;
+  height: 90vh;
+  
+}
+
+/*<-----members Page----->*/
+
+.members-container
+{
+background: #161623;
+
+}
+
+.members-card
+{
+  position: relative;
+  background: rgba(255,255,255,0.05);
+  margin: 20px;
+  box-shadow: 0 15px 35px rgba(0,0,0,0,2) ;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.img-box{
+
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 10px solid rgba(0,0,0,0,25);
+
+}
+
+.member-img
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card-body
+{
+  padding: 0;
+}
+
+.card-body h3
+{
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: 18px;
+  text-align: center;
+  line-height: 1.1rem;
+}
+.card-body h3 span
+{
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: initial;
+  
+}
+
+.sci 
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.sci li 
+{
+  list-style: none;
+  margin: 5px 5px;
+  transform: translateY(40px);
+  transition: 0.5s;
+  opacity: 0;
+  transition-delay: calc(0.1s *var(--i));
+}
+.card:hover .sci li 
+{
+  transform:translateY(0px) ;
+  opacity: 1;
+}
+
+/*<-----about Page----->*/
+
+
+
+.section 
+{
+  height: 100vh;
+  background-color: #ddd;
+}
+
+.about-container
+{
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+  
+}
+
+.about-img-section
+{
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+
+.about-img-section img
+{
+   width: 80%;
+  
+}
+
+.about-container .title h1
+{
+    text-transform: uppercase;
+    font-size: 45px;
+}
+
+ .about-content h3
+ {
+    margin-top: 20px;
+    color: #5d5d5d;
+    font-size: 25px;
+    
+
+
+   
+ }
+
+ .about-content p
+ {
+    margin-top: 10px;
+    font-family: sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+ }
+
+/*<-----Post-form Page----->*/
+
+.blog-form
+{
+  background: url('form6.jpg');
+  background-size: cover;
+  height: 88vh;
+  
+}
+
+
+/*<-----Profile Page----->*/
+
+.profile-container
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.profile-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddd;
+  
+
+
+}
+
+.pro-pic
+{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+
+.profile-container h1{
+
+  margin-bottom: 10px;
 }
