--- a/psr/templates/psr/base.html
+++ b/psr/templates/psr/base.html
@@ -10,9 +10,9 @@
   <!--CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'psr/base.css' %}">
-
+{% comment %} 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap" rel="stylesheet"> {% endcomment %}
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/71f5dfa71f.js" crossorigin="anonymous"></script>
@@ -20,7 +20,13 @@
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+  <script type="text/javascript" src="{% static 'psr/index.js' %}"></script>
+
+ 
+  
   <title>Welcome to PSR</title>
+
 </head>
 
 <!-- body -->
@@ -55,7 +61,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'psr-about' %}">About</a>
             </li> {% endcomment %}
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'psr-contact' %}">Contact Us</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'psr-about' %}">About Us</a>
             </li>
           </ul>
           <div class="mx-2">
