--- a/psr/templates/psr/post_form.html
+++ b/psr/templates/psr/post_form.html
@@ -1,7 +1,7 @@
 {% extends 'psr/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container my-5  d-flex justify-content-center align-items-center">
+<div class="container my-4  d-flex justify-content-center align-items-center blog-form">
 
     <form  method='POST' enctype="multipart/form-data" >
         {% csrf_token %}
