--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,12 +2,12 @@
 {% extends 'psr/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container my-5  d-flex justify-content-center align-items-center">
+<div class="container my-2  d-flex justify-content-center align-items-center login-body">
 
     <form  method='POST' >
         {% csrf_token %}
 
-        <h1 class="text-center mb-4 my-5">Login to our website</h1>
+        <h1 class="text-center mb-4 ">Login to our website</h1>
      
 
         {% comment %} <div class="col-sm-10 my-4 mb-3">
