--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,18 +1,19 @@
 {% extends 'psr/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container my-5  d-flex justify-content-center align-items-center">
 
-    <div class="card text-center  mb-4" style="width: 20rem;">
-        <img src="{{ user.profile.image.url }}" class="card-img-top" alt="...">
+
+<div class="profile-container my-5">
+
+    <div class="card text-center profile-card " style="width: 20rem;">
+
+        <img src="{{ user.profile.image.url }}" class="card-img-top pro-pic" alt="...">
+
         <div class="card-body">
           <h1>  {{ user.username }}  </h1> 
-          
-        </div>
-          <ul class="list-group list-group-flush">
-          <li class="list-group-item">{{ user.email }}</li>
-          
-        </ul>
+          </div>
+ 
+         <p class="mb-5">{{ user.email }}</p>
       </div>
 
    
