--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,7 +1,7 @@
 {% extends 'psr/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container my-5  d-flex justify-content-center align-items-center">
+<div class="container my-2  d-flex justify-content-center align-items-center signup-body">
 
     <form  method='POST' >
         {% csrf_token %}
